<resources>
    <string name="app_name">wildfire_fixed-imports</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_login_register">Login</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_debug">Debug</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="mapbox_access_token">pk.eyJ1Ijoid2lsZGZpcmV3YXRjaCIsImEiOiJjazRibDZ3aTIwZXByM2VxcmUyZm8yZHA4In0.IfXJHi6nw0aB-IwB3G5flA</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="register_here">REGISTER HERE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username/email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign in</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>


    <string name="bottom_sheet_title">My layout</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="bottom_sheet_layout_example">BottomSheetLayout Sample</string>
    <string name="register">Register</string>
    <string name="swipe_up_for_more_filters">Swipe up for more filters</string>
    <string name="filters">Filters</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="theme_title">Themes:</string>
    <string name="light_theme">Dark theme</string>
    <string name="dark_theme">Light theme</string>
    <string name="system_theme">Use system theme</string>
    <string name="battery_saver_theme">Battery saver theme</string>
    <string name="_500_nhazardous">500\nhazardous</string>
    <string name="good_n0">Good\n0</string>
</resources>
