<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:textColor="@color/colorAccent"
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:textColor="@color/colorAccent"
            android:id="@+id/nav_login_register"
            android:icon="@drawable/ic_user_login"
            android:title="@string/menu_login_register" />
        <item
            android:textColor="@color/colorAccent"
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
        <item
            android:textColor="@color/colorAccent"
            android:id="@+id/nav_debug"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_debug" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:textColor="@color/colorAccent"
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:textColor="@color/colorAccent"
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
