<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.wildfire_fixed_imports.view.map_display.WildFireMapFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.wildfire_fixed_imports.view.login_registration.LoginFragment"
        android:label="@string/menu_login_register"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.wildfire_fixed_imports.view.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_debug"
        android:name="com.example.wildfire_fixed_imports.view.z_delete_discarded.DebugFragment"
        android:label="@string/menu_debug"
        tools:layout="@layout/fragment_debug" />

    <fragment
        android:id="@+id/nav_reg"
        android:name="com.example.wildfire_fixed_imports.view.login_registration.RegistrationFragment"
        android:label="Registration"
        tools:layout="@layout/fragment_registration"
        />

<!--    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.wildfire_fixed_imports.view.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />-->

<!--    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.wildfire_fixed_imports.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />-->
</navigation>