<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    app:layoutDescription="@xml/fragment_gallery_scene">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/regfrag_layout_firstname"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:textColor="@android:color/white"
        app:boxBackgroundColor="@android:color/white"
        app:errorEnabled="true"
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/regfrag_layout_lastname"
        app:layout_constraintTop_toBottomOf="@+id/regfrag_text_signup"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/regfrag_et_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@android:color/white"
            android:hint="@string/first_name"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/regfrag_layout_email"
            app:layout_constraintTop_toBottomOf="@+id/regfrag_text_signup"
            tools:layout_editor_absoluteX="16dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/regfrag_layout_lastname"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:textColor="@android:color/white"
        app:boxBackgroundColor="@android:color/white"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/regfrag_layout_email"
        app:layout_constraintTop_toBottomOf="@+id/regfrag_layout_firstname"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/regfrag_et_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@android:color/white"
            android:hint="@string/last_name"
            android:inputType="text"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/regfrag_et_firstname"
            tools:layout_editor_absoluteX="16dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/regfrag_layout_email"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:textColor="@android:color/white"
        app:boxBackgroundColor="@android:color/white"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/regfrag_text_input_layout_password"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regfrag_layout_lastname">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/regfrag_et_EmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/regfrag_text_input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/colorAccent"
        app:boxBackgroundColor="@color/design_default_color_background"
        app:counterEnabled="true"
        app:counterMaxLength="12"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/regfrag_btn_register"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regfrag_layout_email"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/regfrag_et_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/roboto"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@android:color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/regfrag_btn_register"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/button_background"
        android:padding="16dp"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/regfrag_text_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/register_here"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="8dp" />


</androidx.constraintlayout.motion.widget.MotionLayout>